[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cathode"
version = "0.1.0"
description = "Cathode Cloud SDK & CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Cathode Cloud" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
cathode = "cathode.cli:main"

[project.urls]
Homepage = "https://github.com/cathode-cloud/cathode-sdk"
Repository = "https://github.com/cathode-cloud/cathode-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/cathode"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
